<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userprofile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="414dp"
        android:layout_height="146dp"
        android:background="@drawable/userprofilebg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="94dp"
            android:layout_height="93dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509"
            app:srcCompat="@drawable/profile_" />

        <TextView
            android:id="@+id/hellouser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.174"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.504" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="576dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/address"
            android:layout_width="295dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@drawable/inputbg"
            android:drawableLeft="@drawable/address"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/add"
            android:inputType="textPostalAddress"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <EditText
            android:id="@+id/medical"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginBottom="264dp"
            android:background="@drawable/inputbg"
            android:drawableStart="@drawable/medical"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/medical"
            android:inputType="textMultiLine"
            android:paddingStart="8px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/address"
            app:layout_constraintHorizontal_bias="0.692"
            app:layout_constraintStart_toStartOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@+id/address"
            app:layout_constraintVertical_bias="0.145" />


        <TextView
            android:id="@+id/trusted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/trusted"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.196"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/inputbg"
            android:drawableLeft="@drawable/trusted"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="12px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trusted"
            app:layout_constraintVertical_bias="0.038" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/inputbg"
            android:drawableLeft="@drawable/contact"
            android:ems="10"
            android:hint="@string/con"
            android:inputType="phone"
            android:padding="12px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trusted"
            app:layout_constraintVertical_bias="0.232" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="170dp"
            android:layout_height="146dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact"
            app:layout_constraintVertical_bias="0.952"
            app:srcCompat="@drawable/profile" />

        <Button
            android:id="@+id/savechanges"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/contact"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/contact"
            app:layout_constraintTop_toBottomOf="@+id/contact"
            app:layout_constraintVertical_bias="0.079" />

        <ImageView
            android:id="@+id/imagesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintStart_toStartOf="@+id/image2"
            app:layout_constraintTop_toBottomOf="@+id/savechanges"
            app:layout_constraintVertical_bias="0.89"
            app:srcCompat="@drawable/signout" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="143dp"
            android:layout_height="38dp"
            android:layout_marginBottom="16dp"
            android:text="@string/click"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imagesign"
            app:layout_constraintStart_toStartOf="@+id/imagesign"
            app:layout_constraintTop_toBottomOf="@+id/imagesign" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>